--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -30,6 +30,6 @@ jobs:
           commit_message: 'pylint: auto fixes'
           commit_options: '--no-verify'
           repository: .
-          commit_user_name: MdNoor786
-          commit_user_email: MdNoor786@users.noreply.github.com
-          commit_author: MdNoor786 <MdNoor786@users.noreply.github.com>
+          commit_user_name: skuyykek69
+          commit_user_email: skuyykek69@users.noreply.github.com
+          commit_author: skuyykek69 <skuyykek69@users.noreply.github.com>
