--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/skuyykek69/LionZ/",
+  "repository": "https://github.com/FOH300102/300102/",
   "website": "#TODO",
   "success_url": "https://t.me/LionXsupport",
   "env": {
